--- a/src/main/resources/assets/betterdrops/lang/en_pt.json
+++ b/src/main/resources/assets/betterdrops/lang/en_pt.json
@@ -2,7 +2,7 @@
   "itemgroup.betterdrops.better_drop_items": "Better Drops",
 
   "item.betterdrops.armadillo_stew": "Armadillo Stew",
-  "item.betterdrops.axolotl_gill": "Axolotl Gill",
+  "item.betterdrops.axolotl_gill": "Sea lizard wing",
   "item.betterdrops.bat_wings": "Bat Wings",
   "item.betterdrops.chevon": "Chevon",
   "item.betterdrops.chevon_stew": "Chevon Stew",
@@ -21,15 +21,15 @@
   "item.betterdrops.frog_legs": "Frog Legs",
   "item.betterdrops.incorporeal_meat": "Incorporeal Meat",
   "item.betterdrops.incorporeal_stew": "Incorporeal Stew",
-  "item.betterdrops.jingle_meat": "Jingle Meat",
+  "item.betterdrops.jingle_meat": "Bell flesh",
   "item.betterdrops.popped_bee": "Popped Bee",
-  "item.betterdrops.raw_armadillo": "Raw Armadillo",
+  "item.betterdrops.raw_armadillo": "Raw shellback matey",
   "item.betterdrops.raw_bee": "Raw Bee",
   "item.betterdrops.raw_camel": "Raw Camel",
   "item.betterdrops.raw_feline": "Raw Feline",
   "item.betterdrops.raw_piglin": "Raw Piglin",
   "item.betterdrops.raw_villager": "Raw Villager",
-  "item.betterdrops.silent_stew": "Silent Stew",
+  "item.betterdrops.silent_stew": "Sneaky soup",
   "item.betterdrops.silverfish_wool": "Silverfish Wool",
   "item.betterdrops.sniffer_leg": "Sniffer Leg",
   "item.betterdrops.tadpole": "Tadpole"
