--- a/src/main/resources/assets/betterdrops/lang/en_pt.json
+++ b/src/main/resources/assets/betterdrops/lang/en_pt.json
@@ -14,8 +14,10 @@
   "item.betterdrops.cooked_villager": "Cooked Villager",
   "item.betterdrops.cuisses_de_grenouilles": "Cuisses de Grenouilles",
   "item.betterdrops.dolphin_fin": "Dolphin Fin",
+  "item.betterdrops.dolphin_stew": "Dolphin Slop",
   "item.betterdrops.ender_carapace": "Ender Carapace",
   "item.betterdrops.ender_stew": "Ender Stew",
+  "item.betterdrops.feline_stew": "Feline Gruel",
   "item.betterdrops.fox_tail": "Fox Tail",
   "item.betterdrops.fox_tail_stew": "Fox Tail Stew",
   "item.betterdrops.frog_legs": "Frog Legs",
