Added cooked_chevon.json, edited en_us and en_pt. Made fox_tail always edible. Changed axolotl_gill effect chance to 100%. Changed the "better_drop_items" group to "betterdrops_items" to go more in line with the code. (Apparently "BETTER_DROPS_GROUP" is causing git to show a warning, but it seems to function just fine?)

--- a/src/main/resources/assets/betterdrops/lang/en_pt.json
+++ b/src/main/resources/assets/betterdrops/lang/en_pt.json
@@ -1,5 +1,5 @@
 {
-  "itemgroup.betterdrops.better_drop_items": "Better Drops",
+  "itemgroup.betterdrops.betterdrops_items": "Better Drops",
 
   "item.betterdrops.armadillo_stew": "Armadillo Stew",
   "item.betterdrops.axolotl_gill": "Sea lizard wing",
