--- a/src/main/resources/assets/betterdrops/lang/en_us.json
+++ b/src/main/resources/assets/betterdrops/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.betterdrops.chevon": "Chevon",
   "item.betterdrops.chevon_stew": "Chevon Stew",
   "item.betterdrops.cooked_camel": "Cooked Camel",
+  "item.betterdrops.cooked_chevon": "Cooked Chevon",
   "item.betterdrops.cooked_feline": "Cooked Feline",
   "item.betterdrops.cooked_jingle_meat": "Cooked Jingle Meat",
   "item.betterdrops.cooked_piglin": "Cooked Piglin",
