--- a/src/main/resources/assets/betterdrops/lang/en_pt.json
+++ b/src/main/resources/assets/betterdrops/lang/en_pt.json
@@ -1,9 +1,9 @@
 {
   "itemgroup.betterdrops.betterdrops_items": "Better Drops",
 
-  "item.betterdrops.armadillo_stew": "Armadillo Stew",
+  "item.betterdrops.armadillo_stew": "Shellback matey stew",
   "item.betterdrops.axolotl_gill": "Sea lizard wing",
-  "item.betterdrops.bat_wings": "Bat Wings",
+  "item.betterdrops.bat_wings": "Flyin' mouse wings",
   "item.betterdrops.chevon": "Chevon",
   "item.betterdrops.chevon_stew": "Chevon Stew",
   "item.betterdrops.cooked_camel": "Cooked Camel",
